# Integron_Finder

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  .workflow-index.yml  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT  Integron_Finder.py  MANIFEST.in  README  README.md  codemeta.json  integron_finder  nextflow.config  nextflow.profile.config  parallel_integron_finder.nf  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLAT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help-wanted.md
.github/workflows/: .coverage  ruff.yml  testing.yml
.gitlab/issue_templates/: Bug.md  Enhancement  Feature.md
Results_Integron_Finder_acba.007.p01.13/other/: acba.007.p01.13_attc.res  acba.007.p01.13_attc_table.res  acba.007.p01.13_intI.res  acba.007.p01.13_intI_table.res  acba.007.p01.13_phage_int.res  acba.007.p01.13_phage_int_table.res
Singularity/: Singularity.2.0rc1  integron_finder.def
data/Functional_annotation/: integron_integrase.hmm  variants_Pc_intI1.fst
data/Models/: attc_4.cm  phage-int.hmm
doc/: Makefile  requirements.txt
doc/source/: annotation.rst  attc.rst  conf.py  config.rst  dev_guide.rst  galaxy.rst  genbank.rst  hmm.rst  index.rst  infernal.rst  inputs.rst  installation.rst  integrase.rst  integron.rst  introduction.rst  mobyle.rst  outputs.rst  overview.rst  quickstart.rst  references.rst  topology.rst  tutorial.rst  utils.rst  webserver.rst
doc/source/_static/: prodigal_annot_parser.py
doc/source/_templates/: footer.html  layout.html
doc/source/developer_guide/: dev_guide.rst  index.rst  overview.rst
doc/source/user_guide/: changes.rst  index.rst  installation.rst  introduction.rst  mobyle.rst  references.rst  tutorial.rst  webserver.rst
docker/: .dockerignore  Dockerfile  Dockerfile.2.0  Dockerfile.2.0.1  Dockerfile.2.0.2  Dockerfile.2.0.4  Dockerfile.2.0.5  Dockerfile.2.0.rc6  Dockerfile.dev  Dockerfile.master  README.md
integron/: topology.py
integron_finder/: __init__.py  __warning__.py  annotation.py  argparse_utils.py  attc.py  config.py  genbank.py  hmm.py  infernal.py  integrase.py  integron.py  prot_db.py  results.py  topology.py  utils.py
integron_finder/data/Models/: IntI.hmm  __init__.py  integron_integrase.hmm
integron_finder/parser/: __init__.py  annotation_parser.py
integron_finder/scripts/: __init__.py  finder.py  merge.py  split.py
singularity/: Singularity  Singularity.2.0rc1  Singularity.2.0rc2  Singularity.2.0rc3  Singularity.2.0rc4  Singularity.2.0rc5  Singularity.2.0rc6
test/: main.py  test_integron.py
tests/: __init__.py  run_tests.py  test_acba.py  test_add_feature.py  test_config.py  test_contig_empty_prot.py  test_expand.py  test_find_attc.py  test_find_attc_max.py  test_find_integrase.py  test_find_integrons.py  test_func_annot.py  test_functional.py  test_get_version.py  test_integron.py  test_local_max.py  test_merge.py  test_parse_args.py  test_prot_db.py  test_read_hmm.py  test_read_infernal.py  test_results.py  test_scan_hmm.py  test_search_attc.py  test_split.py  test_to_gbk.py  test_topology.py  test_utils.py
tests/data/: ACBA.007.P01_13_local_max_lin.gbk  ACBA.007.P01_13_local_max_lin.summary  LIAN.001.C02_10_local_max_lin.gbk  LIAN.001.C02_10_local_max_lin.summary  PSSU.001.C01_13_local_max_lin.summary  acba.007.p01.13_attC.csv  acba.007.p01.13_local_max_lin.integrons  acba.007.p01.13_proteins.csv  acba_lian_pssu_merged.integrons  acba_lian_pssu_merged.summary  df_max_input_1.csv  expand_circ_both_win_in_rep_output.csv  expand_circ_left_over_ori_input.csv  expand_circ_right_in_rep_output.csv  expand_circ_right_over_ori_output.csv  fake_prodigal  fasta  int_w_prom.fasta  int_w_prom_rc.fasta  lazy_annot_parser.py  lian.001.c02.10_local_max_lin.integrons  lian.001.c02.10_simple.integrons  local_max_circ_left_win_in_rep_11266_15466_bottom.csv  local_max_circ_left_win_in_rep_23108_24316_bottom.csv  local_max_circ_left_win_over_ori_15181_19381_bottom.csv  local_max_circ_left_win_over_ori_3271_7381_bottom.csv  local_max_circ_no_more_attc_962528_966728_top.csv  local_max_circ_no_more_attc_974528_978728_top.csv  local_max_circ_no_more_attc_978528_982728_top.csv  local_max_circ_right_win_in_rep_10258_14458_both.csv  local_max_circ_right_win_in_rep_10258_14458_top.csv  local_max_circ_right_win_in_rep_14258_15466_both.csv  local_max_circ_right_win_in_rep_2258_6458_both.csv  local_max_circ_right_win_in_rep_2258_6458_top.csv  local_max_circ_right_win_in_rep_31108_35308_top.csv  local_max_circ_right_win_in_rep_6258_10458_both.csv  local_max_circ_right_win_in_rep_6258_10458_top.csv  local_max_circ_right_win_over_ori_11271_15471_top.csv  local_max_circ_right_win_over_ori_15271_19471_top.csv  local_max_circ_right_win_over_ori_23271_27471_top.csv  (+19 more)
tests/data/Proteins/: ACBA.007.P01_13.prt  ESCO001.B.00018.P002.prt  NZ_AP023221.2.prt  OBAL001.B.00005.C001.prt  lian.001.c02.10.prt  pssu.001.c01.13.prt  saen.040.p01.10.prt
tests/data/Replicons/: ACBA.0917.00019.0001.fst  ACBA.0917.00019.0002.fst  NZ_AP023221.fasta  NZ_CP016323.fna  OBAL001.B.00005.C001.fst  VIBR.0322.11443.0157.fst  acba_short.fst  empty_prot_file.fna  fake_seq.fst  lian.001.c02.10.fst  replicon_ambiguous_char.fst  replicon_bad_char.fst  replicon_too_short.fst  saen.040.p01.10.fst
tests/data/Results_Integron_Finder_ACBA.0917.00019.gembase/: ACBA.0917.00019.integrons  ACBA.0917.00019.summary  integron_finder.out
tests/data/Results_Integron_Finder_ESCO001.B.00018.P002/: ESCO001.B.00018.P002.integrons  ESCO001.B.00018.P002.summary  integron_finder.out
tests/data/Results_Integron_Finder_ESCO001.C.00001.C001/: ESCO001.C.00001.C001.integrons  integron_finder.out  (+1 more)
tests/functional/: acba.py  test_acba.py  test_acba_annot.py
tests/unit/: test_expand.py  test_find_attc.py  test_find_attc_max.py  test_find_integrase.py  test_find_integrons.py  test_func_annot.py  test_functions.py  test_get_version.py  test_integron.py  test_local_max.py  test_read_hmm.py  test_read_infernal.py  test_scan_hmm.py  test_search_attc.py  test_to_gbk.py
(+246 files in other folders)
