[metadata]
version= 22
name = integron_finder
author = Jean Cury
author_email = jean.cury@normalesup.org
description = Integron Finder aims at detecting integrons in DNA sequences
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/gem-pasteur/Integron_Finder/
project_urls =
    Bug Tracker =  https://github.com/pypa/sampleproject/issues
    Documentation = https://integronfinder.readthedocs.io/en/latest/
license = GPLv3
license_files = COPYING
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics


[options]
python_requires = >=3.6
install_requires =
    numpy >=1.19
    matplotlib >=3.2
    pandas >=1.1
    biopython >=1.78
    colorlog

packages = find:

[options.packages.find]

exclude =
	build
	tests

[options.extras_require]
dev =
    sphinx
    sphinx_rtd_theme
    coverage
    build

[options.entry_points]
console_scripts =
    integron_finder=integron_finder.scripts.finder:main
    integron_split=integron_finder.scripts.split:main
    integron_merge=integron_finder.scripts.merge:main

[sdist]
formats = gztar

[coverage:run]
source = integron_finder
omit =
    tests/*
    setup.py
branch = True

# to exclude some lines and/or functions from coverage, add a comment
# '# pragma: no cover' in the line to exclude from coverage report
# (or first line of a function, loop etc. to exclude all function/loop)

[coverage:html]
directory = coverage_html

# run tests: coverage run tests/run_tests.py
# coverage html