# -*- coding: utf-8 -*-

####################################################################################
# Integron_Finder - Integron Finder aims at detecting integrons in DNA sequences   #
# by finding particular features of the integron:                                  #
#   - the attC sites                                                               #
#   - the integrase                                                                #
#   - and when possible attI site and promoters.                                   #
#                                                                                  #
# Authors: Jean Cury, Bertrand Neron, Eduardo PC Rocha                             #
# Copyright (c) 2015 - 2024  Institut Pasteur, Paris and CNRS.                     #
# See the COPYRIGHT file for details                                               #
#                                                                                  #
# integron_finder is free software: you can redistribute it and/or modify          #
# it under the terms of the GNU General Public License as published by             #
# the Free Software Foundation, either version 3 of the License, or                #
# (at your option) any later version.                                              #
#                                                                                  #
# integron_finder is distributed in the hope that it will be useful,               #
# but WITHOUT ANY WARRANTY; without even the implied warranty of                   #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the                    #
# GNU General Public License for more details.                                     #
#                                                                                  #
# You should have received a copy of the GNU General Public License                #
# along with this program (COPYING file).                                          #
# If not, see <http://www.gnu.org/licenses/>.                                      #
####################################################################################

[metadata]
version= attr: integron_finder.__version__
name = integron_finder
author = Jean Cury
author_email = jean.cury@normalesup.org
description = Integron Finder aims at detecting integrons in DNA sequences
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/gem-pasteur/Integron_Finder/
project_urls =
    Bug Tracker =  https://github.com/pypa/sampleproject/issues
    Documentation = https://integronfinder.readthedocs.io/en/latest/
license = GPLv3
license_files = COPYING
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics


[options]
python_requires = >=3.10
install_requires =
    numpy >= 1.26
    matplotlib >= 3.8
    pandas >= 2
    biopython >= 1.82
    colorlog

packages = find:

[options.packages.find]

exclude =
	build
	tests

[options.extras_require]
dev =
    sphinx
    sphinx_rtd_theme
    coverage
    build

[options.entry_points]
console_scripts =
    integron_finder=integron_finder.scripts.finder:main
    integron_split=integron_finder.scripts.split:main
    integron_merge=integron_finder.scripts.merge:main

[sdist]
formats = gztar

[coverage:run]
source = integron_finder
omit =
    tests/*
    setup.py
branch = True

# to exclude some lines and/or functions from coverage, add a comment
# '# pragma: no cover' in the line to exclude from coverage report
# (or first line of a function, loop etc. to exclude all function/loop)

[coverage:html]
directory = coverage_html

# run tests: coverage run tests/run_tests.py
# coverage html